force-app/main/default/objects/Multiple_account_users__c/Multiple_account_users__c.object-meta.xml
<CustomObject>
    <label>Multiple account users</label>
    <nameField>
        <label>User Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>