force-app/main/default/objects/Multiple_account_users__c/fields/Business__c.field-meta.xml
<CustomField>
    <fullName>Business__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business</label>
    <referenceTo>Approver__c</referenceTo>
    <relationshipLabel>Multiple account users</relationshipLabel>
    <relationshipName>Multiple_account_users</relationshipName>
    <type>Lookup</type>
</CustomField>