force-app/main/default/objects/Multiple_account_users__c/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <label>Department</label>
    <length>100</length>
    <type>Text</type>
</CustomField>