force-app/main/default/objects/Multiple_account_users__c/fields/Field2__c.field-meta.xml
<CustomField>
    <fullName>Field2__c</fullName>
    <label>Department Approver</label>
    <length>100</length>
    <type>Text</type>
</CustomField>